force-app/main/default/objects/User_Preference__c/fields/Benefit_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Order_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Order Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>