force-app/main/default/objects/User_Preference__c/fields/Carrier_Order_Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Order_Implementation_Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Order Implementation Stage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>