force-app/main/default/objects/User_Preference__c/fields/Case_Play_Selected_Cases__c.field-meta.xml
<CustomField>
    <fullName>Case_Play_Selected_Cases__c</fullName>
    <description>Case Play Selected Cases for case play.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Play Selected Cases</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>