force-app/main/default/objects/User_Preference__c/fields/Case_Play_Selected_Queues__c.field-meta.xml
<CustomField>
    <fullName>Case_Play_Selected_Queues__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Play Selected Queues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>