force-app/main/default/objects/User_Preference__c/fields/Coverage_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage Effective Date</label>
    <type>Date</type>
</CustomField>