force-app/main/default/objects/User_Preference__c/fields/MF_Case_Play_Details__c.field-meta.xml
<CustomField>
    <fullName>MF_Case_Play_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MF Case Play Details</label>
    <length>150</length>
    <type>Text</type>
</CustomField>