force-app/main/default/objects/User_Preference__c/fields/Number_to_Serve_Up__c.field-meta.xml
<CustomField>
    <fullName>Number_to_Serve_Up__c</fullName>
    <description>Number to Serve Up for Case Play.</description>
    <label>Number to Serve Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>